# halo2-circuits

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: circuit.rs  lib.rs  verkle.rs
