[package]
name = "ecc-circuits"
version = "0.1.0"
authors = ["nalos"]
edition = "2018"

[dependencies]
orchard = { git = "https://github.com/nikkolasg/orchard", branch = "local" }
halo2 = "=0.1.0-beta.1"
group = "0.11"
ff = "0.11"
pasta_curves = "0.2.1"

[patch.crates-io]
zcash_note_encryption = { git = "https://github.com/zcash/librustzcash.git", rev = "35e75420657599fdc701cb45704878eb3fa2e59a" }
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree.git", rev = "b7bd6246122a6e9ace8edb51553fbf5228906cbb" }
